// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResultCard snapshots > matches complete state with image 1`] = `
<div
  class="group relative overflow-hidden rounded-[8px] border bg-card shadow-sm"
>
  <div
    class="flex aspect-square items-center justify-center bg-muted"
  >
    <div
      class="relative h-full w-full"
    >
      <img
        alt="A cat"
        class="h-full w-full object-cover"
        src="https://example.com/img.png"
      />
      <button
        class="absolute top-2 right-2 rounded-lg bg-black/50 p-1.5 text-white/80 opacity-100 backdrop-blur-sm transition-opacity hover:bg-black/70 md:opacity-0 md:group-hover:opacity-100"
        title="Download"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-download size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15V3"
          />
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <path
            d="m7 10 5 5 5-5"
          />
        </svg>
      </button>
    </div>
  </div>
  <p
    class="line-clamp-2 px-4 pt-4 text-sm leading-[1.29] text-foreground/80"
  >
    A cat
  </p>
  <div
    class="flex flex-wrap gap-x-3 gap-y-0.5 px-4 pt-2 pb-4 text-xs leading-[1.33] text-muted-foreground"
  >
    <span>
      var_0
      : 
      cat
    </span>
  </div>
</div>
`;

exports[`ResultCard snapshots > matches error state 1`] = `
<div
  class="group relative overflow-hidden rounded-[8px] border bg-card shadow-sm"
>
  <div
    class="flex aspect-square items-center justify-center bg-muted"
  >
    <div
      class="flex flex-col items-center gap-1 text-muted-foreground/40"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-alert size-8"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="8"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="16"
          y2="16"
        />
      </svg>
      <span
        class="px-3 text-center text-xs"
      >
        Failed
      </span>
    </div>
  </div>
  <p
    class="line-clamp-2 px-4 pt-4 text-sm leading-[1.29] text-foreground/80"
  >
    A cat
  </p>
  <div
    class="flex flex-wrap gap-x-3 gap-y-0.5 px-4 pt-2 pb-4 text-xs leading-[1.33] text-muted-foreground"
  >
    <span>
      var_0
      : 
      cat
    </span>
  </div>
</div>
`;

exports[`ResultCard snapshots > matches generating state 1`] = `
<div
  class="group relative overflow-hidden rounded-[8px] border bg-card shadow-sm"
>
  <div
    class="flex aspect-square items-center justify-center bg-muted"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-loader-circle size-8 animate-spin text-muted-foreground/40"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 12a9 9 0 1 1-6.219-8.56"
      />
    </svg>
  </div>
  <p
    class="line-clamp-2 px-4 pt-4 text-sm leading-[1.29] text-foreground/80"
  >
    A cat
  </p>
  <div
    class="flex flex-wrap gap-x-3 gap-y-0.5 px-4 pt-2 pb-4 text-xs leading-[1.33] text-muted-foreground"
  >
    <span>
      var_0
      : 
      cat
    </span>
  </div>
</div>
`;

exports[`ResultCard snapshots > matches pending state 1`] = `
<div
  class="group relative overflow-hidden rounded-[8px] border bg-card shadow-sm"
>
  <div
    class="flex aspect-square items-center justify-center bg-muted"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-image size-8 text-muted-foreground/30"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="3"
      />
      <circle
        cx="9"
        cy="9"
        r="2"
      />
      <path
        d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
      />
    </svg>
  </div>
  <p
    class="line-clamp-2 px-4 pt-4 text-sm leading-[1.29] text-foreground/80"
  >
    A cat
  </p>
  <div
    class="flex flex-wrap gap-x-3 gap-y-0.5 px-4 pt-2 pb-4 text-xs leading-[1.33] text-muted-foreground"
  >
    <span>
      var_0
      : 
      cat
    </span>
  </div>
</div>
`;
